2011-01-25  6.6.7-3 Cristy  <quetzlzacatenango@image...>
  * Verify color parameter is a Perl array to avoid seg fault (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=7&t=17928).

2010-11-11  6.6.5-6 Cristy  <quetzlzacatenango@image...>
  * Check that image exists before accessing its member (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=17502).

2010-11-01  6.6.5-6 Cristy  <quetzlzacatenango@image...>
  * The gravity attribute must set the ImageInfo gravity property (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=17282).

2009-12-08  6.5.8-5 <kmx@volny...>
  * A couple of minor changes to Makefile.PL to support Strawberry Perl.

2009-12-06  6.5.8-4 Cristy  <quetzlzacatenango@image...>
  * Support the crop() gravity option.

2009-11-23  6.5.8-0 Cristy  <quetzlzacatenango@image...>
  * Add 'dither' option to Remap().

2009-10-18  6.5.7-0 Cristy  <quetzlzacatenango@image...>
  * Interpret gravity properly for ExtentImage().
  * Support the  Modulate() method parameter, 'lightness.'

2009-10-08  6.5.6-10 <kmx@volny...>
  * Improve PerlMagick.PL to work with Strawberry Perl under Windows.

2009-08-02  6.5.4-8 Cristy  <quetzlzacatenango@image...>
  * Create a image registry to track which image objects must be cloned
    when a Perl thread is created.

2009-06-14  6.5.3-7 Anthony Thyssen <A.Thyssen@griffith...>
  * Expand PerlMagick Composite() 'mask' merge for both compose 'displace'
    and new 'distort' mapping (absolute lookup)

2009-06-11  6.5.3-5 Anthony Thyssen <A.Thyssen@griffith...>
  * Fixed PerlMagick Composite() for correct merging of 'mask' image into
    the overlay image for Displacement Mapping Composition.

2009-06-02  6.5.3-2 Cristy  <quetzlzacatenango@image...>
  * Fix filename parameter in Read() (e.g. $image->Read(filename=>'xc:white')).  
2009-04-14  6.5.1-3 Cristy  <quetzlzacatenango@image...>
  * Support magick parameter for Read() (e.g.