@@ -8806,10 +8806,13 @@ Mogrify(ref,...)
           if (attribute_flag[3] != 0)
             {
               geometry_info.sigma=argument_list[3].real_reference;
-              SetImageArtifact(image,"modulate:colorspace","HSB");
+              SetImageArtifact(image,"modulate:colorspace","HWB");
             }
           if (attribute_flag[4] != 0)
-            geometry_info.rho=argument_list[4].real_reference;
+            {
+              geometry_info.rho=argument_list[4].real_reference;
+              SetImageArtifact(image,"modulate:colorspace","HSB");
+            }
           if (attribute_flag[5] != 0)
             {
               geometry_info.sigma=argument_list[5].real_reference;
